--- a/src/Modules/itWORKS.ExtendedRegistration/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/itWORKS.ExtendedRegistration/App_Data/Localization/it-IT/orchard.module.po
@@ -9,8 +9,8 @@
 # > msgstr "{ messaggio }"
 
 msgctxt "~/Modules/itWORKS.ExtendedRegistration/Views/Register.cshtml"
-msgid " and must contain at least "
-msgstr "e deve contenere almeno"
+msgid "{0} and must contain at least {1}"
+msgstr "{0} e deve contenere almeno {1}"
 
 msgctxt "~/Modules/itWORKS.ExtendedRegistration/Views/Register.cshtml"
 msgid "Account creation was unsuccessful. Please correct the errors and try again."
