Aggiunta traduzione per "Thank you for registering. We sent you an e-mail with instructions to enable your account." con scope AKUserActionsController (così che funzioni anche per il mobile)

--- a/src/Modules/Laser.Orchard.UsersExtensions/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.UsersExtensions/App_Data/Localization/it-IT/orchard.module.po
@@ -48,6 +48,10 @@ msgctxt "~/Modules/Laser.Orchard.UsersExtensions/Views/EditorTemplates/Parts/Use
 msgid "Users registration - policies acceptation"
 msgstr "Registrazione utenti - accettazione informative"
 
+msgctxt "Laser.Orchard.UsersExtensions.Controllers.AKUserActionsController"
+msgid "Thank you for registering. We sent you an e-mail with instructions to enable your account."
+msgstr "Grazie per esserti registrato. Ti abbiamo inviato una e-mail con le istruzioni per attivare la tua utenza."
+
 msgctxt "Laser.Orchard.UsersExtensions.Controllers.BaseUserActionsController"
 msgid "Email confirmed"
 msgstr "Email confermata"
