--- a/src/Modules/Laser.Orchard.RazorScripting/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.RazorScripting/App_Data/Localization/it-IT/orchard.module.po
@@ -33,8 +33,16 @@ msgid "A comma-separated list of possible outcomes."
 msgstr "Un una lista di possibili risultati, separati da una virgola."
 
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
+msgid "A name for the razor that explain what it does."
+msgstr "Un nome per il razor che spiega cosa fa."
+
+msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "Possible Outcomes."
 msgstr "Possibili risultati."
+
+msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
+msgid "Razor name."
+msgstr "Nome del Razor."
 
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "RazorScript"
@@ -43,6 +51,10 @@ msgstr "RazorScript"
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "The script to run every time the Razor Decision Activity is invoked. You can use ContentItem, Services, WorkContext, and T(). Call SetOutcome(string outcome) to define the outcome of the activity."
 msgstr "Lo script da eseguire ogni volta che il Razor Decision Activity è invocato. Si possono usare: ContentItem, Services, WorkContext, e T(). Chiamare SetOutcome (string outcome ) per definire i risultati dell'attività."
+
+msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
+msgid "The script to run every time the Razor Decision Activity is invoked. You can use Model.ContentItem, Model.OrchardServices, Model.T(), Model.Tokens. If the script renders a string, that string has threated as outcome."
+msgstr "Lo script da eseguire ogni volta che il Razor Decision Activity è invocato. Si possono usare: Model.ContentItem, Model.OrchardServices, Model.T(), Model.Tokens. Se lo script ritorna una stringa, la stringa è trattata come il risultato."
 
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "You must provide a Script"
